--- a/hosted-pages/login.html
+++ b/hosted-pages/login.html
@@ -1,15 +1,136 @@
 <!DOCTYPE html>
 
-<html>
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
-  <title>Sign in to freeCodeCamp</title>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <title>Sign in to freeCodeCamp | freeCodeCamp</title>
+  <link href="https://www.freecodecamp.org" rel="canonical">
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="UvVP23KA-xdDS6KUpR3-1CEMMmNRev5bXUFo" name="csrf-token">
+  <meta content=
+  "Learn to code with free online courses, programming projects, and interview preparation for developer jobs."
+  property="og:title">
+  <meta content="freeCodeCamp" property="og:site_name">
+  <meta content="on" name="twitter:widgets:csp">
+  <meta content="d0bc047a482c03c24f1168004c2a216a" name="p:domain_verify">
+  <meta content="https://www.freecodecamp.org" property="og:url">
+  <meta content=
+  "Learn to code with free online courses, programming projects, and interview preparation for developer jobs."
+  property="og:description">
+  <meta content=
+  "https://s3.amazonaws.com/freecodecamp/curriculum-diagram-full.jpg" property=
+  "og:image">
+  <meta content="article" property="og:type">
+  <meta content="https://www.facebook.com/freecodecamp" property=
+  "article:publisher">
+  <meta content="Responsive" property="article:section">
+  <link href="https://plus.google.com/+Freecodecamp" rel="publisher">
+  <link href="https://plus.google.com/+Freecodecamp" rel="author">
+  <meta content=
+  "Learn to code with free online courses, programming projects, and interview preparation for developer jobs."
+  name="description">
+  <meta content="@freecodecamp" name="twitter:creator">
+  <meta content="http://www.freecodecamp.org" name="twitter:url">
+  <meta content="@freecodecamp" name="twitter:site">
+  <meta content="summary_large_image" name="twitter:card">
+  <meta content=
+  "https://s3.amazonaws.com/freecodecamp/curriculum-diagram-full.jpg" name=
+  "twitter:image:src">
+  <meta content="Learn to code for free" name="twitter:title">
+  <meta content=
+  "Learn to code with free online courses, programming projects, and interview preparation for developer jobs."
+  name="twitter:description">
+  <meta content="a40ee5d5dba3bb091ad783ebd2b1383f" name="p:domain_verify">
+  <meta content="#FFFFFF" name="msapplication-TileColor">
+  <meta content="/" name="msapplication-TileImage">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-144x144.png"
+  rel="android-chrome" sizes="144x144">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-192x192.png"
+  rel="android-chrome" sizes="192x192">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-36x36.png"
+  rel="android-chrome" sizes="36x36">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-48x48.png"
+  rel="android-chrome" sizes="48x48">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-72x72.png"
+  rel="android-chrome" sizes="72x72">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-96x96.png"
+  rel="android-chrome" sizes="96x96">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-manifest.json"
+  rel="android-chrome-manifest">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-114x114.png"
+  rel="apple-touch-icon" sizes="114x114">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-120x120.png"
+  rel="apple-touch-icon" sizes="120x120">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-144x144.png"
+  rel="apple-touch-icon" sizes="144x144">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-152x152.png"
+  rel="apple-touch-icon" sizes="152x152">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-180x180.png"
+  rel="apple-touch-icon" sizes="180x180">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-57x57.png"
+  rel="apple-touch-icon" sizes="57x57">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-60x60.png"
+  rel="apple-touch-icon" sizes="60x60">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-72x72.png"
+  rel="apple-touch-icon" sizes="72x72">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-76x76.png"
+  rel="apple-touch-icon" sizes="76x76">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-precomposed.png"
+  rel="apple-touch-icon-precomposed">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon.png" rel=
+  "apple-touch-icon">
+  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-16x16.png"
+  rel="favicon" sizes="16x16">
+  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-32x32.png"
+  rel="favicon" sizes="32x32">
+  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-96x96.png"
+  rel="favicon" sizes="96x96">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/mstile-144x144.png" rel=
+  "mstile" sizes="144x144">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/mstile-150x150.png" rel=
+  "mstile" sizes="150x150">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/mstile-310x310.png" rel=
+  "mstile" sizes="310x310">
+  <link href=
+  "https://s3.amazonaws.com/freecodecamp/favicons/mstile-310x150.png" rel=
+  "mstile" sizes="310x150">
+  <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-70x70.png"
+  rel="mstile" sizes="70x70">
+  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel=
+  "favicon">
+  <link href="//s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel=
+  "shortcut icon"><!-- Latest compiled and minified CSS -->
+  <link crossorigin="anonymous" href=
+  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+  integrity=
+  "sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+  rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <style>
     html,
@@ -41,7 +162,6 @@
       border-radius: .25em;
       width: 1.3em;
       height: 1.3em;
-      float: left;
       margin-right: .5em;
     }
 
@@ -239,24 +359,41 @@
     @media (min-width: 767px) {
       .navbar {
         padding-left: 15px;
-        padding-right: 30px;
+        padding-right: 45px;
       }
     }
 
     .navbar-default .navbar-nav>li>a {
       color: #eeeeee;
     }
+
+    .navbar-nav > li > a, .navbar-brand {
+      padding-top:5px !important; padding-bottom:0 !important;
+      height: 30px;
+    }
+    .navbar {min-height:30px !important;}
+
+    .navbar-brand>img {
+        display: block;
+        height: 30px;
+        padding-top: 4px 
+    }
+    .navbar-nav>li {
+        float: left;
+        padding-top: 4px;
+    }
+
   </style>
 </head>
 
 <body>
-
-  <div class="navbar navbar-default navbar-static-top nav-height">
+  <nav class="navbar navbar-default navbar-static-top nav-height">
     <div class="navbar-header">
-      <button class="hamburger navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse" type="button">
+      <button class="hamburger navbar-toggle" data-target=".navbar-collapse"
+      data-toggle="collapse" type="button">
       <div class="col-xs-12">
-        <span class="hamburger-text">Menu</span>
-      </div></button> <a class="navbar-brand" href="http://freecodecamp.org"><img alt=
+        <span class="hamburger-text" style="color: #eeeeee">Menu</span>
+      </div></button><a class="navbar-brand" href="/"><img alt=
       "learn to code javascript at freeCodeCamp logo" class=
       "img-responsive nav-logo" src=
       "https://s3.amazonaws.com/freecodecamp/freecodecamp_logo.svg"></a>
@@ -266,114 +403,108 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right hamburger-dropdown">
         <li>
-          <a href="https://learn.freecodecamp.org" rel="noopener" target="_blank">Learn</a>
+          <a href="https://learn.freecodecamp.org" rel="noopener" target=
+          "_blank">Learn</a>
         </li>
 
 
         <li>
-          <a href="https://forum.freecodecamp.org" rel="noopener" target="_blank">Forum</a>
+          <a href="https://forum.freecodecamp.org" rel="noopener" target=
+          "_blank">Forum</a>
         </li>
 
 
         <li>
-          <a href="https://freecodecamp.org/">Home</a>
+          <a href="https://www.freecodecamp.org">Home</a>
         </li>
       </ul>
     </div>
-  </div>
+  </nav>
+
 
   <div class="container">
     <div class="container">
-      <div class="col-xs-12">
+      <div class="row flashMessage negative-30">
+        <div class="col-xs-12">
+          <div class="alert fade in" id="flash-board" style="display: none;">
+            <button class="close" data-dismiss="alert" type=
+            "button"><span class="ion-close-circled" id=
+            "flash-close"></span></button>
 
-        <div class="row">
-          <div class="text-center">
-            <h2>Sign up (or sign in with your existing account)</h2>
-            <div class="button-spacer"></div>
-          </div>
-
-          <div class="col-sm-6 col-sm-offset-3">
-            <div class="form-group">
-              <div class="enter-email">
-
-                <input autofocus="" class="input-lg form-control" id="email" name="email" oninput="setCustomValidity('')" oninvalid="this.setCustomValidity('Enter your email address')" placeholder="Enter your email address" required="" type="email">
-
-                <div class="button-spacer">
-                </div>
-
-
-                <div class="checkbox">
-                  <label><input name="quincy-emails" type="checkbox">
-                    <span class="cr"><i class="cr-icon fa fa-check"></i></span> I
-                    want weekly emails from Quincy, freeCodeCamp.org's
-                    founder.</label>
-                </div>
-
-
-                <div class="checkbox">
-                  <label><input id="terms-privacy" name="terms-privacy" type=
-                      "checkbox"> <span class="cr"><i class=
-                        "cr-icon fa fa-check"></i></span> I accept the <a href=
-                        "/terms" target="_blank">Terms of Service</a> and <a href=
-                        "/privacy" target="_blank">Privacy Policy</a>
-                        (required)</label>
-                </div>
-
-
-                <div class="button-spacer">
-                </div>
-                <button id="send-email-btn" class="btn btn-primary btn-lg btn-block">Get a code on your email</button>
-              </div>
-
-
-              <div class="enter-code" style="display: none;">
-                <input name="code" id="code" value="" class="input-lg form-control" placeholder="Enter the code you recieved on your email">
-
-                <div class="button-spacer">
-                </div>
-                <button id="send-code-btn" class="btn btn-primary btn-lg btn-block">Submit Code</button>
-              </div>
-
-
+            <div id="flash-content">
             </div>
           </div>
         </div>
-
-
-        <div class="row">
-          <div class="col-sm-6 col-sm-offset-3">
-            <br>
-            <p class="text-center"><br>
-              <br>
-              <a href="https://freecodecamp.org/deprecated-signin">Continute with
-                      old sign in methods</a>
-            </p>
-          </div>
-        </div>
-
-
       </div>
     </div>
-  </div>
 
-  <!--[if IE 8]>
+
+    <div class="container">
+      <div class="container">
+        <div class="col-xs-12">
+          <div class="row">
+            <div class="text-center">
+              <h2>Enter your email address to sign up or sign in.</h2>
+
+
+              <div class="button-spacer">
+              </div>
+            </div>
+
+
+            <div class="col-sm-6 col-sm-offset-3">
+              <div class="form-group">
+                <div class="enter-email">
+                  <input autofocus="" class="input-lg form-control" id="email"
+                  name="email" oninput="setCustomValidity('')" oninvalid=
+                  "this.setCustomValidity('Enter your email address')"
+                  placeholder="" required="" type="email">
+
+                  <div class="button-spacer">
+                  </div>
+                  <button class="btn btn-primary btn-lg btn-block" id=
+                  "send-email-btn">Email me a sign in code</button>
+                </div>
+
+
+                <div class="enter-code" style="display: none;">
+                  <input class="input-lg form-control" id="code" name="code"
+                  placeholder="Enter the code you recieved on your email"
+                  value="">
+
+                  <div class="button-spacer">
+                  </div>
+                  <button class="btn btn-primary btn-lg btn-block" id=
+                  "send-code-btn">Submit Code</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--[if IE 8]>
           <script src="//cdnjs.cloudflare.com/ajax/libs/ie8/0.2.5/ie8.js"></script>
           <![endif]-->
-  <!--[if lte IE 9]>
+    <!--[if lte IE 9]>
           <script src="https://cdn.auth0.com/js/polyfills/1.0/base64.min.js"></script>
           <script src="https://cdn.auth0.com/js/polyfills/1.0/es5-shim.min.js"></script>
           <![endif]-->
-          <!-- Latest compiled and minified JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-  </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="https://use.fontawesome.com/ae11c47b27.js">
-  </script>
-  <script src="https://cdn.auth0.com/js/auth0/9.2/auth0.min.js">
-  </script>
-  <script src="https://cdn.auth0.com/js/polyfills/1.0/object-assign.min.js">
-  </script>
-  <script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src=
+    "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+    </script> 
+    <script crossorigin="anonymous" integrity=
+    "sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+    </script> 
+    <script src="https://use.fontawesome.com/ae11c47b27.js">
+    </script> 
+    <script src="https://cdn.auth0.com/js/auth0/9.2/auth0.min.js">
+    </script> 
+    <script src="https://cdn.auth0.com/js/polyfills/1.0/object-assign.min.js">
+    </script> 
+    <script>
     $(document).ready(function() {
 
       var config = JSON.parse(
@@ -422,7 +553,6 @@
       }
 
       function login() {
-        console.log('logging in...');
         var email = $('input#email').val();
         var code = $('input#code').val();
         webAuth.passwordlessLogin({
@@ -437,16 +567,6 @@
         });
       };
 
-      disableMagicButtonForAgreement(true);
-
-      $('#terms-privacy').click(function() {
-        if (this.checked) {
-          disableMagicButtonForAgreement(false);
-        } else {
-          disableMagicButtonForAgreement(true);
-        }
-      });
-
       $('#send-email-btn').click(function(){
         sendEmail();
       });
@@ -456,7 +576,26 @@
       });
 
     });
-  </script>
+    </script> 
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }
+        ,
+        i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    }
+    )(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-55446531-1', 'auto');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+    </script> 
+  </div>
 </body>
-
 </html>
