Updated login.html to fix minor spelling error

--- a/hosted-pages/login.html
+++ b/hosted-pages/login.html
@@ -393,7 +393,7 @@
               <div class="enter-code" style="display: none;">
                 <div class="text-center">
                   <h2>
-                    Enter the code you recieved on your email.
+                    Enter the code you received on your email.
                   </h2>
                   <div class="button-spacer"></div>
                 </div>
