fix: add deprecated sign-in path

--- a/hosted-pages/login.html
+++ b/hosted-pages/login.html
@@ -403,6 +403,16 @@
                   <button class="btn btn-primary btn-lg btn-block" id="send-code-btn">Submit Code</button>
                 </form>
               </div>
+              <div class="row">
+                  <div class="col-xs-12">
+                    <br>
+                    <p class="text-center">
+                      <br>
+                      <br>
+                      <a href="https://freecodecamp.org/deprecated-signin">If you previously signed in using Google, Facebook, GitHub, Twitter, or LinkedIn, click here to add an email address to your account and sign in.</a>
+                    </p>
+                  </div>
+                </div>
             </div>
           </div>
         </div>
