fix: remove linkedIn

--- a/pages/login.html
+++ b/pages/login.html
@@ -409,7 +409,7 @@
                     <p class="text-center">
                       <br>
                       <br>
-                      <a href="https://freecodecamp.org/deprecated-signin">If you previously signed in using Google, Facebook, GitHub, Twitter, or LinkedIn, click here to add an email address to your account and sign in.</a>
+                      <a href="https://freecodecamp.org/deprecated-signin">If you previously signed in using Google, Facebook, GitHub, or Twitter click here to add an email address to your account and sign in.</a>
                     </p>
                   </div>
                 </div>
