--- a/emails/passwordless-login-code.html
+++ b/emails/passwordless-login-code.html
@@ -35,8 +35,10 @@
 
             {% elsif send == 'code' %}
 
-            <p style="font-size: 1.4em; line-height: 1.3;">Your verification code is: <b>{{ code }}</b></p>
-
+            <p style="font-size: 1.4em; line-height: 1.3;">Your one time pin (OTP) code is: <b>{{ code }}</b></p>
+            <br>
+            <p style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;">This OTP is valid for the next <b>15 minutes</b> only.</p>
+            <p style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;">If you have made multiple sign in requests, only the latest OTP received by you is valid.</p>
           {% endif %}
 
         {% endif %}
