fix: update error message

--- a/pages/login.html
+++ b/pages/login.html
@@ -564,7 +564,7 @@
           console.log('error logging-in', err);
 
           $('#flash-content').html(
-            'Oops...something is not right. Please go back to freeCodecamp.org and try again.'
+            'The code you entered is not valid. Please check the latest OTP that you have recieved.'
           );
 
           $('#flash-board')
