--- a/pages/login.html
+++ b/pages/login.html
@@ -564,7 +564,7 @@
           console.log('error logging-in', err);
 
           $('#flash-content').html(
-            'The code you entered is not valid. Please check the latest OTP that you have recieved.'
+            'The code you entered is not valid. Please check the latest OTP that you have received.'
           );
 
           $('#flash-board')
