fix(dev-tenant): update notice and fix email btn

--- a/pages/login.html
+++ b/pages/login.html
@@ -423,18 +423,24 @@
             <div class="row">
               <div class="col-sm-8 col-sm-offset-2">
                 <h1>
-                  Development Instance of freeCodeCamp
+                  freeCodeCamp.org - Development Application
                 </h1>
                 <h3>
-                  You are signing into a test instance of freeCodeCamp. If you did not mean to be here, <a
-                    href='https://www.freecodecamp.org'>follow this link to go the main website</a>.
+                  You are signing into a devlopment instance.
                 </h3>
+                <p>
+                  This staging/beta instance is used by our contributors and staff to test features before shipping them
+                  to the main production platform. Your progress may not persist the next time you visit this
+                  application. We welcome you to try out the features before everyone else and help us
+                  <a href="https://www.freecodecamp.org/forum/c/contributors" target="blank" rel="noopener noreferrer">
+                    by giving us feedback on our forum. </a>
+                </p>
                 <div class="button-spacer"></div>
               </div>
               <div class="col-sm-6 col-sm-offset-3">
-                <!-- DISABLED ON THE DEV TENANT -->
-                <!--
                 <div class="social-signin-methods">
+                  <!-- DISABLED ON THE DEV TENANT -->
+                  <!--
                   <button id="login-google" class="btn btn-primary btn-lg btn-block btn-social btn-social-google">
                     <span><i class="fab fa-google"></i></span> Continue with Google
                   </button>
@@ -447,11 +453,17 @@
                     <span><i class="fab fa-facebook"></i></span> Continue with Facebook
                   </button>
                   <div class="button-spacer"></div>
+                  -->
+                  <!-- DISABLED ON THE DEV TENANT -->
                   <button id="login-email" class="btn btn-primary btn-lg btn-block btn-social btn-social-email">
                     <span><i class="fas fa-envelope"></i></span> Continue with Email
                   </button>
+                  <div class="button-spacer"></div>
+                  <p>
+                    If you did not mean to be here, <a href="https://www.freecodecamp.org"> follow this link to go the
+                      main website. </a>
+                  </p>
                 </div>
-		-->
                 <div class="passwordless-email" style="display: none;">
                   <div class="enter-email">
                     <form>
