fix: typo on the dev tenant sign in page

--- a/pages/login.html
+++ b/pages/login.html
@@ -420,7 +420,7 @@
                   freeCodeCamp.org - Development Application
                 </h1>
                 <h3>
-                  You are signing into a devlopment instance.
+                  You are signing into a development instance.
                 </h3>
                 <p>
                   This staging/beta instance is used by our contributors and staff to test features before shipping them
