Changed CDN for Cash library

--- a/pages/login.html
+++ b/pages/login.html
@@ -17,8 +17,8 @@
     sizes="180x180">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Mono:400" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdn.freecodecamp.org/login-assets/font-awesome-5-11-2/all.min.js" crossorigin="anonymous">
+  
 
 <style>
 :root {
@@ -362,7 +362,7 @@ fieldset[disabled] .btn-primary.focus {
           </p>
           <div class="social-signin-methods">
             <!-- DISABLED ON THE DEV TENANT -->
-            <button id="login-google" class="btn btn-primary">
+            <!-- <button id="login-google" class="btn btn-primary">
               <span><i class="fab fa-google"></i></span> Continue with Google
             </button>
             <button id="login-github" class="btn btn-primary">
@@ -370,7 +370,7 @@ fieldset[disabled] .btn-primary.focus {
             </button>
             <button id="login-facebook" class="btn btn-primary">
               <span><i class="fab fa-facebook"></i></span> Continue with Facebook
-            </button>
+            </button> -->
             <!-- END DISABLED ON THE DEV TENANT -->
             <button id="login-email" class="btn btn-primary">
               <span><i class="fas fa-envelope"></i></span> Continue with Email
@@ -430,7 +430,7 @@ fieldset[disabled] .btn-primary.focus {
   <script src="https://cdn.auth0.com/js/polyfills/1.0/es5-shim.min.js"></script>
   <![endif]-->
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/cash/4.1.5/cash.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.freecodecamp.org/login-assets/cash-4-1-5/cash.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.auth0.com/js/auth0/9.11.3/auth0.min.js"></script>
   <script defer src="https://cdn.auth0.com/js/polyfills/1.0/object-assign.min.js"></script>
 
