Removed link to Font Awesome and all FA icons

--- a/pages/login.html
+++ b/pages/login.html
@@ -17,8 +17,6 @@
     sizes="180x180">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Mono:400" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.freecodecamp.org/login-assets/font-awesome-5-11-2/all.min.js" crossorigin="anonymous">
-  
 
 <style>
 :root {
@@ -358,22 +356,22 @@ fieldset[disabled] .btn-primary.focus {
             to the main production platform. Your progress may not persist the next time you visit this
             application. We welcome you to try out the features before everyone else and help us
             <a href="https://www.freecodecamp.org/forum/c/contributors" target="blank" rel="noopener noreferrer">
-              by giving us feedback on our forum. </a>
+              by giving us feedback on our forum.</a>
           </p>
           <div class="social-signin-methods">
             <!-- DISABLED ON THE DEV TENANT -->
             <!-- <button id="login-google" class="btn btn-primary">
-              <span><i class="fab fa-google"></i></span> Continue with Google
+              Continue with Google
             </button>
             <button id="login-github" class="btn btn-primary">
-              <span><i class="fab fa-github"></i></span> Continue with GitHub
+              Continue with GitHub
             </button>
             <button id="login-facebook" class="btn btn-primary">
-              <span><i class="fab fa-facebook"></i></span> Continue with Facebook
+              Continue with Facebook
             </button> -->
             <!-- END DISABLED ON THE DEV TENANT -->
             <button id="login-email" class="btn btn-primary">
-              <span><i class="fas fa-envelope"></i></span> Continue with Email
+              Continue with Email
             </button>
           </div>
           <div class="passwordless-email" style="display: none;">
@@ -388,8 +386,8 @@ fieldset[disabled] .btn-primary.focus {
                     placeholder="" required="" type="email">
                 </div>
                 <div class="button-holder">
-                  <button class="btn btn-primary" id="send-email-btn"><span><i
-                    class="fas fa-paper-plane"></i></span> Email me a short code to continue</button>
+                  <button class="btn btn-primary" id="send-email-btn">
+                    Email me a short code to continue</button>
                 </div>
               </form>
             </div>
@@ -402,8 +400,8 @@ fieldset[disabled] .btn-primary.focus {
                   <input autofocus="" class="form-control" id="code" name="code" placeholder="" value="" autocomplete="off">
                 </div>
                 <div class="button-holder">
-                  <button class="btn btn-primary" id="send-code-btn"><span><i
-                    class="fas fa-sign-in-alt"></i></span> Submit code and continue to freeCodeCamp.org</button>
+                  <button class="btn btn-primary" id="send-code-btn">
+                    Submit code and continue to freeCodeCamp.org</button>
                 </div>
               </form>
             </div>
