chore: lint and format

--- a/pages/login.html
+++ b/pages/login.html
@@ -16,322 +16,328 @@
   <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon"
     sizes="180x180">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Mono:400" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Mono:400"
+    crossorigin="anonymous">
 
-<style>
-:root {
-  --dark-blue: #002ead;
-  --theme-color: #0a0a23;
-  --gray-90: #0a0a23;
-  --gray-85: #1b1b32;
-  --gray-80: #2a2a40;
-  --gray-75: #3b3b4f;
-  --gray-15: #d0d0d5;
-  --gray-10: #dfdfe2;
-  --gray-05: #eeeef0;
-  --gray-00: #fff;
-  --error: #a94442;
-  --header-height: 38px;
-}
+  <style>
+    :root {
+      --dark-blue: #002ead;
+      --theme-color: #0a0a23;
+      --gray-90: #0a0a23;
+      --gray-85: #1b1b32;
+      --gray-80: #2a2a40;
+      --gray-75: #3b3b4f;
+      --gray-15: #d0d0d5;
+      --gray-10: #dfdfe2;
+      --gray-05: #eeeef0;
+      --gray-00: #fff;
+      --error: #a94442;
+      --header-height: 38px;
+    }
 
-html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: sans-serif;
-  font-size: 18px;
-}
+    html {
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      font-family: sans-serif;
+      font-size: 18px;
+    }
 
-*, *:before, *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit;
-}
+    *,
+    *:before,
+    *:after {
+      -webkit-box-sizing: inherit;
+      -moz-box-sizing: inherit;
+      box-sizing: inherit;
+    }
 
-head {
-  display: none;
-}
+    head {
+      display: none;
+    }
 
-body {
-  font-family: "Lato", Arial;
-  font-size: 18px;
-  line-height: 1.42857143;
-  background-color: var(--gray00);
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
+    body {
+      font-family: "Lato", Arial;
+      font-size: 18px;
+      line-height: 1.42857143;
+      background-color: var(--gray00);
+      margin: 0;
+      padding: 0;
+      border: 0;
+    }
 
-header, nav, main {
-  display: block;
-}
+    header,
+    nav,
+    main {
+      display: block;
+    }
 
-header {
-  top: 0;
-  position: fixed;
-  width: 100%;
-  z-index: 200;
-}
+    header {
+      top: 0;
+      position: fixed;
+      width: 100%;
+      z-index: 200;
+    }
 
-.universal-nav {
-  display: flex;
-  display: -ms-flexbox;
-  height: var(--header-height);
-  justify-content: center;
-  font-size: 18px;
-  background: var(--theme-color);
-  position: fixed;
-  color: var(--gray-00);
-  width: 100%;
-}
+    .universal-nav {
+      display: flex;
+      display: -ms-flexbox;
+      height: var(--header-height);
+      justify-content: center;
+      font-size: 18px;
+      background: var(--theme-color);
+      position: fixed;
+      color: var(--gray-00);
+      width: 100%;
+    }
 
-.universal-nav-logo {
-  display: block;
-  width: auto;
-  height: 25px;
-  margin-top: 7px;
-}
+    .universal-nav-logo {
+      display: block;
+      width: auto;
+      height: 25px;
+      margin-top: 7px;
+    }
 
-.default-layout {
-  margin-top: var(--header-height, 0px);
-  background: var(--gray-00);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  min-height: calc(100vh - var(--header-height, 0px));
-}
+    .default-layout {
+      margin-top: var(--header-height, 0px);
+      background: var(--gray-00);
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      min-height: calc(100vh - var(--header-height, 0px));
+    }
 
-.container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding: 30px 15px 15px;
-}
+    .container {
+      margin-right: auto;
+      margin-left: auto;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding: 30px 15px 15px;
+    }
 
-.row {
-  margin-left: -15px;
-  margin-right: -15px;
-}
+    .row {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
 
-h1, h3, p {
-  color: var(--gray-85);
-  text-align: center;
-}
+    h1,
+    h3,
+    p {
+      color: var(--gray-85);
+      text-align: center;
+    }
 
-h1 {
-  font-size: 1.2rem;
-  margin: 1.2rem 0 1.2rem;
-}
+    h1 {
+      font-size: 1.2rem;
+      margin: 1.2rem 0 1.2rem;
+    }
 
-h3 {
-  font-size: 1rem;
-  margin: 0 0 1.2rem;
-}
+    h3 {
+      font-size: 1rem;
+      margin: 0 0 1.2rem;
+    }
 
-p {
-  font-size: 1rem;
-  margin: 0 0 1.2rem;
-}
+    p {
+      font-size: 1rem;
+      margin: 0 0 1.2rem;
+    }
 
-a {
-  color: inherit;
-  text-decoration: underline;
-}
+    a {
+      color: inherit;
+      text-decoration: underline;
+    }
 
-a:hover,
-a:focus {
-  text-decoration: none;
-  color: var(--gray-80);
-  background-color: var(--gray-10);
-}
+    a:hover,
+    a:focus {
+      text-decoration: none;
+      color: var(--gray-80);
+      background-color: var(--gray-10);
+    }
 
-.content {
-  margin-top: 30px;
-}
+    .content {
+      margin-top: 30px;
+    }
 
-.big-heading {
-  font-size: 1.6rem;
-}
+    .big-heading {
+      font-size: 1.6rem;
+    }
 
-.social-signin-methods,
-.passwordless-email {
-  margin: 1.2rem 0 1.2rem;
-}
+    .social-signin-methods,
+    .passwordless-email {
+      margin: 1.2rem 0 1.2rem;
+    }
 
-.social-signin-methods {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+    .social-signin-methods {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-.control-label {
-  display: inline-block;
-  max-width: 100%;
-  margin-bottom: 5px;
-  font-weight: bold;
-  font-size: 18px;
-  text-align: left;
-}
+    .control-label {
+      display: inline-block;
+      max-width: 100%;
+      margin-bottom: 5px;
+      font-weight: bold;
+      font-size: 18px;
+      text-align: left;
+    }
 
-.form-control {
-  font-family: 'Roboto Mono', monospace;
-  color: var(--gray-85);
-  background-color: var(--gray-00);
-  outline: none;
-  border: 1px solid #ccc;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  border-radius: 0px;
-  width: 100%;
-  height: 39px;
-  padding: 6px 12px;
-  font-size: 18px;
-  line-height: 1.42857143;
-}
+    .form-control {
+      font-family: 'Roboto Mono', monospace;
+      color: var(--gray-85);
+      background-color: var(--gray-00);
+      outline: none;
+      border: 1px solid #ccc;
+      -webkit-box-shadow: none !important;
+      box-shadow: none !important;
+      border-radius: 0px;
+      width: 100%;
+      height: 39px;
+      padding: 6px 12px;
+      font-size: 18px;
+      line-height: 1.42857143;
+    }
 
-.form-group {
-  margin-bottom: 15px;
-}
+    .form-group {
+      margin-bottom: 15px;
+    }
 
-.button-holder {
-  text-align: center;
-}
+    .button-holder {
+      text-align: center;
+    }
 
-.help-block {
-  margin-top: 5px;
-}
+    .help-block {
+      margin-top: 5px;
+    }
 
-.has-error {
-  color: var(--error);
-}
+    .has-error {
+      color: var(--error);
+    }
 
-.has-error > .form-control {
-  border: 1px solid var(--error);
-}
+    .has-error>.form-control {
+      border: 1px solid var(--error);
+    }
 
-.btn {
-  font-family: 'Roboto Mono', monospace;
-  min-height: 56px;
-  width: 100%;
-  padding: 10px 16px;
-  font-size: 22px;
-  background-color: var(--gray-15);
-  border-width: 3px;
-  border-color: var(--gray-85);
-  color: var(--gray-85);
-  border-radius: 0px;
-  text-decoration: none;
-  outline: none;
-}
+    .btn {
+      font-family: 'Roboto Mono', monospace;
+      min-height: 56px;
+      width: 100%;
+      padding: 10px 16px;
+      font-size: 22px;
+      background-color: var(--gray-15);
+      border-width: 3px;
+      border-color: var(--gray-85);
+      color: var(--gray-85);
+      border-radius: 0px;
+      text-decoration: none;
+      outline: none;
+    }
 
-.btn:not(:last-child) {
-  margin-bottom: 10px;
-}
+    .btn:not(:last-child) {
+      margin-bottom: 10px;
+    }
 
-.btn:hover,
-.btn-primary:hover {
-  border-color: var(--gray-85);
-  background-color: var(--gray-85);
-  color: var(--gray-05);
-}
+    .btn:hover,
+    .btn-primary:hover {
+      border-color: var(--gray-85);
+      background-color: var(--gray-85);
+      color: var(--gray-05);
+    }
 
-.btn:active,
-.btn-primary:active {
-  background-color: var(--gray-05);
-}
+    .btn:active,
+    .btn-primary:active {
+      background-color: var(--gray-05);
+    }
 
-.btn:focus,
-.btn-primary:focus,
-.btn-primary.focus {
-  background-color: var(--gray-15);
-  color: var(--gray-85);
-  border-color: var(--gray-85);
-}
+    .btn:focus,
+    .btn-primary:focus,
+    .btn-primary.focus {
+      background-color: var(--gray-15);
+      color: var(--gray-85);
+      border-color: var(--gray-85);
+    }
 
-.btn:active:hover,
-.btn-primary:hover,
-.btn-primary:active:hover,
-.btn-primary.active:hover,
-.open > .dropdown-toggle.btn-primary:hover,
-.btn-primary:active:focus,
-.btn-primary.active:focus,
-.open > .dropdown-toggle.btn-primary:focus,
-.btn-primary:active.focus,
-.btn-primary.active.focus,
-.open > .dropdown-toggle.btn-primary.focus {
-  background-color: var(--gray-85);
-  color: var(--gray-05);
-}
+    .btn:active:hover,
+    .btn-primary:hover,
+    .btn-primary:active:hover,
+    .btn-primary.active:hover,
+    .open>.dropdown-toggle.btn-primary:hover,
+    .btn-primary:active:focus,
+    .btn-primary.active:focus,
+    .open>.dropdown-toggle.btn-primary:focus,
+    .btn-primary:active.focus,
+    .btn-primary.active.focus,
+    .open>.dropdown-toggle.btn-primary.focus {
+      background-color: var(--gray-85);
+      color: var(--gray-05);
+    }
 
-.btn.disabled,
-.btn[disabled],
-fieldset[disabled] .btn,
-.btn-primary.disabled:hover,
-.btn-primary[disabled]:hover,
-fieldset[disabled] .btn-primary:hover,
-.btn-primary.disabled:focus,
-.btn-primary[disabled]:focus,
-fieldset[disabled] .btn-primary:focus,
-.btn-primary.disabled.focus,
-.btn-primary[disabled].focus,
-fieldset[disabled] .btn-primary.focus {
-  cursor: not-allowed;
-  background-color: var(--gray-15);
-  border-color: var(--gray-75);
-  color: var(--gray-75);
-}
+    .btn.disabled,
+    .btn[disabled],
+    fieldset[disabled] .btn,
+    .btn-primary.disabled:hover,
+    .btn-primary[disabled]:hover,
+    fieldset[disabled] .btn-primary:hover,
+    .btn-primary.disabled:focus,
+    .btn-primary[disabled]:focus,
+    fieldset[disabled] .btn-primary:focus,
+    .btn-primary.disabled.focus,
+    .btn-primary[disabled].focus,
+    fieldset[disabled] .btn-primary.focus {
+      cursor: not-allowed;
+      background-color: var(--gray-15);
+      border-color: var(--gray-75);
+      color: var(--gray-75);
+    }
 
-@media (min-width: 501px) {
-  .big-heading {
-    font-size: 2.5rem;
-  }
+    @media (min-width: 501px) {
+      .big-heading {
+        font-size: 2.5rem;
+      }
 
-  h1 {
-    font-size: 1.5rem;
-  }
+      h1 {
+        font-size: 1.5rem;
+      }
 
-  h3 {
-    font-size: 1.1rem;
-  }
+      h3 {
+        font-size: 1.1rem;
+      }
 
-  .btn {
-    max-width: 400px;
-  }
-}
+      .btn {
+        max-width: 400px;
+      }
+    }
 
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
-  
-  .page-content {
-    margin-left: 16.66666667%;
-    width: 65.79%;
-  }
+    @media (min-width: 768px) {
+      .container {
+        width: 750px;
+      }
 
-  .btn {
-    max-width: 600px;
-  }
-}
+      .page-content {
+        margin-left: 16.66666667%;
+        width: 65.79%;
+      }
 
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
+      .btn {
+        max-width: 600px;
+      }
+    }
 
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
-}
+    @media (min-width: 992px) {
+      .container {
+        width: 970px;
+      }
+    }
 
-</style>
+    @media (min-width: 1200px) {
+      .container {
+        width: 1170px;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -381,9 +387,8 @@ fieldset[disabled] .btn-primary.focus {
                   <label for="email" class="control-label">
                     Enter your email address to continue:
                   </label>
-                  <input autofocus="" class="form-control" id="email" name="email"
-                    oninput="setCustomValidity('')" value autocomplete="off"
-                    placeholder="" required="" type="email">
+                  <input autofocus="" class="form-control" id="email" name="email" oninput="setCustomValidity('')" value
+                    autocomplete="off" placeholder="" required="" type="email">
                 </div>
                 <div class="button-holder">
                   <button class="btn btn-primary" id="send-email-btn">
@@ -397,7 +402,8 @@ fieldset[disabled] .btn-primary.focus {
                   <label for="code" class="control-label">
                     Enter the short code you received on your email:
                   </label>
-                  <input autofocus="" class="form-control" id="code" name="code" placeholder="" value="" autocomplete="off">
+                  <input autofocus="" class="form-control" id="code" name="code" placeholder="" value=""
+                    autocomplete="off">
                 </div>
                 <div class="button-holder">
                   <button class="btn btn-primary" id="send-code-btn">
