--- a/pages/login.html
+++ b/pages/login.html
@@ -12,9 +12,53 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="UvVP23KA-xdDS6KUpR3-1CEMMmNRev5bXUFo" name="csrf-token">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="icon">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon"
-    sizes="180x180">
+  <meta
+  content="https://cdn.freecodecamp.org/platform/universal/fcc_meta_1920x1080-indigo.png"
+  name="og:image"
+  />
+  <meta content="freeCodeCamp Auth0 Page" name="twitter:title" />
+  <meta
+  content="Authentication landing page for freecodecamp.org"
+  name="og:description"
+  />
+  <meta content="#FFFFFF" name="msapplication-TileColor" />
+  <meta
+  content="https://cdn.freecodecamp.org/universal/favicons/browserconfig.xml"
+  rel="msapplication-config"
+  />
+  <link
+  href="https://cdn.freecodecamp.org/universal/favicons/android-chrome-192x192.png"
+  rel="android-chrome"
+  sizes="192x192"
+  />
+  <link
+  href="https://cdn.freecodecamp.org/universal/favicons/android-chrome-384x384.png"
+  rel="android-chrome"
+  sizes="384x384"
+  />
+  <link
+  href="https://cdn.freecodecamp.org/universal/favicons/site.webmanifest"
+  rel="manifest"
+  />
+  <link
+  href="https://cdn.freecodecamp.org/universal/favicons/apple-touch-icon.png"
+  rel="apple-touch-icon"
+  sizes="180x180"
+  />
+  <link
+  href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png"
+  rel="favicon"
+  sizes="16x16"
+  />
+  <link
+  href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png"
+  rel="favicon"
+  sizes="32x32"
+  />
+  <link
+  href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico"
+  rel="icon"
+  />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Mono:400"
     crossorigin="anonymous">
