Add visible focus state to sign in page btns

--- a/pages/login.html
+++ b/pages/login.html
@@ -306,6 +306,8 @@
       background-color: var(--gray-15);
       color: var(--gray-85);
       border-color: var(--gray-85);
+      outline: 5px auto -webkit-focus-ring-color;
+      outline-offset: -2px;
     }
 
     .btn:active:hover,
