--- a/dev-tenant/pages/login.html
+++ b/dev-tenant/pages/login.html
@@ -561,7 +561,7 @@
     }
 
     function isEmail(email) {
-      var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+      var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z]{2,})+$/;
       return regex.test(email);
     }
 
