--- a/pages/login.html
+++ b/pages/login.html
@@ -441,7 +441,7 @@
                 </div>
                 <div class="button-holder">
                   <button class="btn btn-primary" id="send-code-btn">
-                    Submit the sign in code and login</button>
+                    Submit the sign in code and sign in to freeCodeCamp</button>
                 </div>
               </form>
             </div>
